# pi0-composition-proof-lab

./: .gitignore  README.md  pyproject.toml
examples/: bundled_episodes.jsonl  pi07_airfryer_skills.yaml
pi0_compose/: __init__.py  cli.py  doctor.py  io_utils.py  manifest_search.py  models.py  remix_detector.py  report.py  runner.py  skill_graph.py
site/: app.js  embedded-demos.js  index.html  styles.css
site/data/: airfryer-receipt.json
tests/: test_compose_lab.py
