[project]
name = "pi0-composition-proof-lab"
version = "0.1.0"
description = "Falsify compositional generalization claims for π0-style VLAs before real robot demos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pi0-compose = "pi0_compose.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pi0_compose*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
